# smart-mail-agent-ssot-pro

./: .env.example  .gitattributes  .gitignore  .sitecustomize.bak  Makefile  Makefile.v2  __main__.py  one_shot_api_up.sh  rules_feat.py  sitecustomize.py.off.20250916T122238
reports_auto/pack_stage/20250916T051048/reports_auto/export/20250916T005124/stage/: README.md.bak.20250902T190656  pyproject.toml
reports_auto/pack_stage/20250916T051048/reports_auto/export/20250916T005124/stage/reports_auto/status/: INTENTS_20250915T111118.md  TRI_SUMMARY_20250915T091825.md
reports_auto/pack_stage/20250916T051048/reports_auto/export/20250916T005124/stage/scripts/: api_down.sh  api_where.sh  eval_spam.sh  sma_env_doctor.sh  sma_fix_db.sh  sma_hotfix_intent_rules_metrics.sh  sma_intent_rules_focus_v11d.sh  sma_kie_post_boost_sla_v1.sh  sma_oneclick_kie_hybrid_hotfix.sh  sma_oneclick_post.sh
reports_auto/pack_stage/20250916T051048/reports_auto/export/20250916T005124/stage/scripts/_backup/: ._.venv_clean_lib_python3.10_site-packages_langchain_openai_llms_base.py  ._artifacts_inbox_.unpacked_4_4_generate_mail_dataset.py  ._artifacts_inbox_.unpacked_4_4_pro_fallback_threshold.py  ._artifacts_inbox_77_77_eval_kie.py  ._artifacts_inbox_77_77_sma_actions_exec.py  ._artifacts_inbox_77_77_sma_data_factory_chat_v5.py  (+17 more)
reports_auto/pack_stage/20250916T051048/reports_auto/export/20250916T005124/stage/tools/: actions_backfill_from_fs.py  e2e_full.py  log_ml_signals.py  materialize_missing_artifacts.sh  ml_io.py.bak.20250912T183207  print_everything.sh  smtp_send_from_outbox.py  spam_eval.py
(+1540 files in other folders)
